--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,6 @@ JWT_SECRET=HRsqM7AcFvAa/cctdsqNUQ==
 
 # Neon Database
 DATABASE_CLIENT=postgres
-DATABASE_URL=postgres://paulnotfromstrapi:1LjJRvloDxU3@ep-broad-butterfly-20890794.us-east-2.aws.neon.tech/neondb
-DATABASE_SHEMA=public
+DATABASE_URL=to_be_modified
 DATABASE_POOL_MIN=1
 DATABASE_POOL_MAX=100
