--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,6 @@ JWT_SECRET=HRsqM7AcFvAa/cctdsqNUQ==
 # Neon Database
 DATABASE_CLIENT=postgres
 DATABASE_URL=to_be_modified
+DATABASE_SSL=true
 DATABASE_POOL_MIN=1
 DATABASE_POOL_MAX=100
